[package]
name = "password-server"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4"
mimalloc = {version = "*", features = ["secure-full"] }
botan = "0.6"
rocksdb = "0.13"
lazy_static = "*"
rocket_contrib = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"